fixed gap in profile and clipping on like button

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -21,6 +21,10 @@
   margin: 0;
   font-size: 24px;
   line-height: 29.05px;
+  text-overflow: ellipsis;
+  white-space: no-wrap;
+  overflow: hidden;
+  max-width: 219px;
 }
 .card__button {
   background: transparent url("../images/button-like.svg") center no-repeat;
@@ -29,8 +33,6 @@
   height: 18px;
 }
 .card__button:hover {
-  background: transparent url("../images/button-like-hover.svg") center
-    no-repeat;
   cursor: pointer;
-  opacity: 60%;
+  opacity: 0.5;
 }
