--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -89,6 +89,7 @@
   .profile__name {
     font-size: 22px;
     max-width: 196px;
+    line-height: 26.63px;
   }
   .profile__edit-button {
     width: 18px;
